# disa-parser

./: .gitignore  CLAUDE.md  LICENSE  README.md  disa_exams.csv  pyproject.toml
docs/: disa-implementation.md  output-format.md  parser-spec.md
scripts/: extract_question_fixtures.py
src/disa_parser/: __init__.py  cli.py  constants.py  fixture.py  images.py  models.py  parser.py
tests/: __init__.py  conftest.py  test_detection.py  test_expected_output.py  test_fixture.py  test_fixtures_parametrized.py  test_images.py  test_models.py  test_parser.py
tests/fixtures/: fysiologi_exam.json
tests/fixtures/questions/: anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-01.json  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-02.expected.yaml  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-02.json  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-03.json  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-04.expected.yaml  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-04.json  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-05.expected.yaml  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-05.json  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-06.expected.yaml  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-06.json  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-07.expected.yaml  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-07.json  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-08.expected.yaml  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-08.json  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-09.expected.yaml  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-09.json  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-10.expected.yaml  anatomi_och_histologi_1-sMnP9iOuBL9nyPJ7Z3Da-10.json  (+232 more)
