[project]
name = "disa-parser"
version = "0.1.0"
description = "Parser for DISA (Digital Examination System) exam PDFs with answer extraction"
readme = "README.md"
authors = [
    { name = "Johan Dahlin", email = "jdahlin@gmail.com" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["disa", "pdf", "parser", "exam", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "pymupdf>=1.24.0",
    "pytest>=8.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
disa-parser = "disa_parser.cli:main"

[project.urls]
Homepage = "https://github.com/jdahlin/disa-parser"
Repository = "https://github.com/jdahlin/disa-parser"
Issues = "https://github.com/jdahlin/disa-parser/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/disa_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/disa_parser"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
